добавлены исправления в папки style, index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             Фритрек и нулевой спринт: Подготовка к работе
           </h2>
           <div class="picture__block">
-            <span class="picture__text">&lt;/HTML&gt;</span>
+            <a class="picture__text">&lt;/HTML&gt;</a>
             <img
               class="picture adaptiv__width filter_bright"
               src="./images/image.png"
@@ -73,7 +73,7 @@
             </p>
           </div>
           <div class="buttons">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg class="like-icon" 
                 xmlns="http://www.w3.org/2000/svg" 
                 width="39" 
@@ -87,7 +87,7 @@
                 <path class="sparks" fill="#FF0000" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button> 
-            <button class="card__like-button button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -95,7 +95,7 @@
         <article class="card">
           <h2 class="card__title">1 спринт: Я — чистый лист</h2>
           <div class="picture__block">
-            <span class="picture__text">&lt;/HTML&gt;</span>
+            <a class="picture__text">&lt;/HTML&gt;</a>
             <img
               class="picture adaptiv__width filter_gray"
               src="./images/image.png"
@@ -115,7 +115,7 @@
             </p>
           </div>
           <div class="buttons">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg class="like-icon" 
                 xmlns="http://www.w3.org/2000/svg" 
                 width="39" 
@@ -129,8 +129,8 @@
                 <path class="sparks" fill="#FF0000" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button> 
-            <button class="card__like-button button">
-              <span class="button__text">Like</span>
+            <button class="card__like-button button" type="button">
+              <a class="button__text">Like</a>
             </button>
           </div>
         </article>
@@ -155,7 +155,7 @@
             </p>
           </div>
           <div class="buttons">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg class="like-icon" 
                 xmlns="http://www.w3.org/2000/svg" 
                 width="39" 
@@ -169,7 +169,7 @@
                 <path class="sparks" fill="#FF0000" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button> 
-            <button class="card__like-button button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -177,7 +177,7 @@
         <article class="card">
           <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
           <div class="picture__block">
-            <span class="picture__text">&lt;desigions&gt;</span>
+            <a class="picture__text">&lt;desigions&gt;</a>
             <img
               class="picture adaptiv__width filter_sepia"
               src="./images/image.png"
@@ -197,7 +197,7 @@
             </p>
           </div>
           <div class="buttons">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg class="like-icon" 
                 xmlns="http://www.w3.org/2000/svg" 
                 width="39" 
@@ -211,7 +211,7 @@
                 <path class="sparks" fill="#FF0000" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button> 
-            <button class="card__like-button button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -219,7 +219,7 @@
         <article class="card">
           <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
           <div class="picture__block">
-            <span class="picture__text">care</span>
+            <a class="picture__text">care</a>
             <img
               class="picture adaptiv__width filter_invert"
               src="./images/image.png"
@@ -240,7 +240,7 @@
             </p>
           </div>
           <div class="buttons">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg class="like-icon" 
                 xmlns="http://www.w3.org/2000/svg" 
                 width="39" 
@@ -254,7 +254,7 @@
                 <path class="sparks" fill="#FF0000" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button> 
-            <button class="card__like-button button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -262,7 +262,7 @@
         <article class="card">
           <h2 class="card__title">3 спринт: Обходные стратегии</h2>
           <div class="picture__block">
-            <span class="picture__text">&lt;support&gt;</span>
+            <a class="picture__text">&lt;support&gt;</a>
             <img
               class="picture adaptiv__width filter_opacity"
               src="./images/image.png"
@@ -280,7 +280,7 @@
             </p>
           </div>
           <div class="buttons">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg class="like-icon" 
                 xmlns="http://www.w3.org/2000/svg" 
                 width="39" 
@@ -294,7 +294,7 @@
                 <path class="sparks" fill="#FF0000" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button> 
-            <button class="card__like-button button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -322,7 +322,7 @@
             </p>
           </div>
           <div class="buttons">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg class="like-icon" 
                 xmlns="http://www.w3.org/2000/svg" 
                 width="39" 
@@ -336,7 +336,7 @@
                 <path class="sparks" fill="#FF0000" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button> 
-            <button class="card__like-button button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
@@ -344,7 +344,7 @@
         <article class="card">
           <h2 class="card__title">«Сейчас я здесь»</h2>
           <div class="picture__block">
-            <span class="picture__text">&lt;experience&gt;</span>
+            <a class="picture__text">&lt;experience&gt;</a>
             <img
               class="picture adaptiv__width filter_drop-shadow"
               src="./images/image.png"
@@ -365,7 +365,7 @@
             </p>
           </div>
           <div class="buttons">
-            <button class="card__icon-button">
+            <button class="card__icon-button" type="button">
               <svg class="like-icon" 
                 xmlns="http://www.w3.org/2000/svg" 
                 width="39" 
@@ -379,24 +379,24 @@
                 <path class="sparks" fill="#FF0000" d="M36 13h3v3h-3v-3Zm-9 14h3v3h-3v-3Zm-9 6h3v3h-3v-3Zm-9-6h3v3H9v-3ZM24 0h3v3h-3V0Zm9 3h3v3h-3V3ZM3 3h3v3H3V3Zm9-3h3v3h-3V0ZM0 13h3v3H0v-3Z"/>
               </svg>
             </button> 
-            <button class="card__like-button button">
+            <button class="card__like-button button" type="button">
               <span class="button__text">Like</span>
             </button>
           </div>
         </article>
       </section>
+      <section class="save">
+        <button class="button__save button" type="button" onclick="window['dialog'].showModal()" aria-controls="dialog">
+          <svg class="floppy"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 39 39"
+          >
+            <use href="./svg/floopy.svg#floppy"></use>
+          </svg>
+          <span class="button__text">Сохранить на память</span>
+        </button> 
+      </section>
     </main>
-    <footer class="footer">
-      <button class="button__save button" type="button" onclick="window['dialog'].showModal()" aria-controls="dialog">
-        <svg class="floppy"
-          xmlns="http://www.w3.org/2000/svg"
-          viewBox="0 0 39 39"
-        >
-          <use href="./svg/floopy.svg#floppy"></use>
-        </svg>
-        <span class="button__text">Сохранить на память</span>
-      </button> 
-    </footer>
     <dialog id="dialog" class="modal">
       <svg 
         class="floppy floppy-modal"
